<resources>
    <string name="app_name">Поиск фильмов</string>
    <string name="config_isPerfectFilterOnly">Только соотвествующие</string>
    <string name="config_useOverview">Поиск в описании фильма</string>
    <string name="configSleepSecondsBetweenLoadPages1">Пауза между загрузкой страниц (</string>
    <string name="configSleepSecondsBetweenLoadPages2">сек.)</string>
    <string name="mailListItemPictureDescription" translatable="false">Миниатюра фильма</string>
    <string name="mainListAskUpdateDb">Обновить список фильмов ?</string>
    <string name="mainListUpdateCancel">Не надо</string>
    <string name="mainListUpdateYes">Обновить</string>
    <string name="mainListMessageNoInternet">Нет подключения к интернет</string>
    <string name="mainListMessageNoWiFi">Обновить можно только через WiFi</string>
    <string name="config_refreshMode">Обновление списка фильмов</string>
    <string name="config_refreshModeWiFi">только при соединении WiFi</string>
    <string name="config_refreshModeAll">при любом соединении</string>
    <string name="menu_aboutApp">О программе</string>
    <string name="menu_likedList">Отобранные фильмы</string>
    <string name="menu_mainScreen">Фильмы</string>
    <string name="menu_config">Настройки</string>
    <string name="menu_quit">Выход</string>
    <string name="mainActivityAskToExit">Вы хотите выйти ?</string>
    <string name="mainActivityAskToExitYes">Остаться</string>
    <string name="mainActivityAskToExitCancel">Выйти</string>
    <string name="drawerOpen" translatable="false">R.string.navigation_drawer_open</string>
    <string name="drawerClose" translatable="false">R.string.navigation_drawer_close</string>
    <string name="menuDetailShare">Поделиться</string>
    <string name="menuDetailRemain">Напомнить</string>
    <string name="searchHint">Поиск</string>
    <string name="shareMoviePrompt">Поделиться фильмом</string>
    <string name="menuGoMainPrompt">На основной экран</string>
    <string name="menuGoLikedPrompt">Отобранные</string>
    <string name="titleFragmentDetail">Подробности</string>
    <string name="titleFragmentLiked">Отобранные</string>
    <string name="notificationChannelName">Информация о фильмах</string>
    <string name="notificationChannelDescription">Тут появляются сообщения о завершении загрузки и напоминания о фильме</string>
    <string name="notificationChannelFinishTitle">Обновление данных</string>
    <string name="notificationChannelFinishBodyPart1">Загружено </string>
    <string name="notificationChannelFinishBodyPart2">фильмов в базу данных</string>
    <string name="aboutHtml">
        <![CDATA[
        <h3>Программа поиска фильмов</h3>
        <p>Часто хочется вспомнить название фильма ,где было то-то и и то-то. Теперь это возможно!</p>
        <p>Просто введите слова в строку поиска и будут отобраны все фильмы где в названии(или и в описании) встречаются слова, по созвучию похожие на искомые.</p>
        <ul>
        <li>Фильмы</li>
        <p>Здесь все доступные фильмы, долгим нажатием вы можете пометить фильм как отобранный. Можно выполнить поиск/фильтрацию.
        Простым тапом вы можете открыть детальную информацию о фильме. Отсортированы сначала по вероятности соотвествия поисковой фразе и потом по названию</p>
        <li>Отобранные</li>
        <p>Здесь список отобранных Вами фильмов, независимо от параметров поиска</p>
        <li>Настройки</li>
        <p>Только соответствующие - в списке фильмов будут ТОЛЬКО те, в которых есть искомые слова</p>
        <p>Поиск в описании фильма - поиск не только в названии, но и в описании фильма</p>
        <p>Пауза между загрузкой страниц - между загрузкой страниц будет выдержана указанная пауза</p>
        <p>Обновление списка фильмов - можно настроить будет ли оно происходить только при WiFi поключении</p>
        </ul>
        ]]>
    </string>
    <string name="dialogRemainButtonSetAlert">Установить</string>
    <string name="dialogRemainButtonCancel">Отменить</string>
    <string name="dialogRemainAlertText">Вспомните про фильм</string>
    <string name="dialogRemainAlertTitle">Напоминание</string>
</resources>
