<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundField"
    android:divider="@drawable/config_separator"
    android:dividerPadding="@dimen/horizontal_margin"
    android:orientation="vertical"
    android:showDividers="middle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_element_height">

        <TextView
            style="@style/ListConfig"
            android:text="@string/config_isPerfectFilterOnly"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/configIsPerfectFilterOnly"
            style="@style/ListConfig"
            android:theme="@style/ListConfig"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_element_height">

        <TextView
            style="@style/ListConfig"
            android:text="@string/config_useOverview"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/configUseOverview"
            style="@style/ListConfig"
            android:theme="@style/ListConfig"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_element_height">

            <TextView
                android:id="@+id/configPromptSleepSecondsBetweenLoadPages"
                style="@style/ListConfig"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_element_height">

            <SeekBar
                android:id="@+id/configSleepSecondsBetweenLoadPages"
                style="@style/ListConfig"
                android:layout_width="match_parent"
                android:max="60"
                android:progress="7"
                android:theme="@style/ListConfig"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_element_height">

        <TextView
            style="@style/ListConfig"
            android:text="@string/config_refreshMode"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/configConnectionMode"
            style="@style/ListConfig"
            android:height="@dimen/list_element_height"
            android:layout_width="match_parent"
            android:theme="@style/ListConfig">

            <RadioButton
                android:id="@+id/configConnectionModeWiFi"
                style="@style/ListConfig"
                android:height="@dimen/list_element_height"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_element_height"
                android:text="@string/config_refreshModeWiFi"
                android:theme="@style/ListConfig" />

            <RadioButton
                android:id="@+id/configConnectionModeAll"
                style="@style/ListConfig"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_element_height"
                android:text="@string/config_refreshModeAll"
                android:theme="@style/ListConfig">

            </RadioButton>
        </RadioGroup>
    </LinearLayout>


</LinearLayout>